wk_taa_taaqa/src/objects/Software_Project__c.object
<CustomObject>
    <fields>
        <fullName>AMS_Account__c</fullName>
        <label>AMS Account</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_GUID__c</fullName>
        <externalId>true</externalId>
        <label>Project_GUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Account__c</fullName>
        <label>SFDC Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Software_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Professional and Client Services</label>
    <nameField>
        <label>Project/Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional and Client Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>